# FairRoot

./: CMakeLists.txt  DartConfiguration.tcl
build2/: CTestTestfile.cmake  DartConfiguration.tcl  FairRootConfigVersion.cmake  FairVersion.h  config.csh  config.csh_install  config.sh  config.sh_install  fairroot-config
build2/MbsAPI/: CTestTestfile.cmake
build2/base/: CTestTestfile.cmake  generate_dictionary_G__BaseDict.sh
build2/base/MQ/: CTestTestfile.cmake
build2/datamatch/: CTestTestfile.cmake  generate_dictionary_G__FairDataMatchDict.sh
build2/eventdisplay/: CTestTestfile.cmake  generate_dictionary_G__EventDisplayDict.sh
build2/examples/: CTestTestfile.cmake
build2/examples/MQ/1-sampler-sink/: CTestTestfile.cmake
build2/examples/MQ/2-sampler-processor-sink/: CTestTestfile.cmake
build2/examples/MQ/3-dds/: CTestTestfile.cmake
build2/examples/MQ/4-copypush/: CTestTestfile.cmake
build2/examples/MQ/5-req-rep/: CTestTestfile.cmake
build2/examples/MQ/6-multiple-channels/: CTestTestfile.cmake
build2/examples/MQ/7-parameters/: CTestTestfile.cmake  generate_dictionary_G__FairMQExample7Dict.sh
build2/examples/MQ/8-multipart/: CTestTestfile.cmake
build2/examples/MQ/9-PixelDetector/: CTestTestfile.cmake
build2/examples/MQ/9-PixelDetector/macros/: CTestTestfile.cmake  run_digi.sh  run_digiToBin.sh  run_sim.sh
build2/examples/MQ/9-PixelDetector/param/: CTestTestfile.cmake
build2/examples/MQ/9-PixelDetector/run/: CTestTestfile.cmake  startFairMQEx9_Static.sh
build2/examples/MQ/9a-PixelDetector/: CTestTestfile.cmake
build2/examples/MQ/Lmd/: CTestTestfile.cmake  generate_dictionary_G__ExLmdDict.sh
build2/examples/MQ/multiple-transports/: CTestTestfile.cmake
build2/examples/MQ/prototype-pair/: CTestTestfile.cmake
build2/examples/MQ/prototype-pubsub/: CTestTestfile.cmake
build2/examples/MQ/prototype-reqrep/: CTestTestfile.cmake
build2/examples/MQ/serialization/: CTestTestfile.cmake  generate_dictionary_G__SerializationExampleDict.sh
build2/examples/advanced/MbsTutorial/: CTestTestfile.cmake  generate_dictionary_G__MbsTutorialDict.sh
build2/examples/advanced/Region/: CTestTestfile.cmake
build2/examples/advanced/Tutorial3/: CTestTestfile.cmake  generate_dictionary_G__FairTestDetectorDict.sh
build2/examples/common/mcstack/: CTestTestfile.cmake  generate_dictionary_G__MCStackDict.sh
build2/examples/common/passive/: CTestTestfile.cmake  generate_dictionary_G__PassiveDict.sh
build2/examples/simulation/Tutorial1/: CTestTestfile.cmake
build2/examples/simulation/Tutorial2/: CTestTestfile.cmake
build2/examples/simulation/Tutorial4/: CTestTestfile.cmake
build2/examples/simulation/rutherford/: CTestTestfile.cmake
build2/fairmq/: CTestTestfile.cmake
build2/fairmq/shmem/prototype/: CTestTestfile.cmake
build2/fairmq/test/: CTestTestfile.cmake
build2/fairmq/test/protocols/: runner.cxx
build2/fairtools/: CTestTestfile.cmake  G__FairToolsDict.cxx  G__FairToolsDict_rdict.pcm  generate_dictionary_G__FairToolsDict.sh
build2/geane/: CTestTestfile.cmake  generate_dictionary_G__GeaneDict.sh
build2/generators/: CTestTestfile.cmake  generate_dictionary_G__GenDict.sh
build2/geobase/: CTestTestfile.cmake  G__GeoBaseDict.cxx_tmp  generate_dictionary_G__GeoBaseDict.sh
build2/lib/: libFairTools.rootmap
build2/logger/: CTestTestfile.cmake
build2/parbase/: CTestTestfile.cmake  G__ParBaseDict.cxx_tmp  generate_dictionary_G__ParBaseDict.sh
build2/parmq/: CTestTestfile.cmake
build2/trackbase/: CTestTestfile.cmake  generate_dictionary_G__TrkBaseDict.sh
examples/: CMakeLists.txt
examples/MQ/1-sampler-sink/: CMakeLists2.txt
examples/MQ/prototype-dealerrouter/: CMakeLists.txt  PrototypeEpnProcessor.cxx  PrototypeFlpProcessor.h  README.md  prototype-dealerrouter.json  runPrototypeEpnProcessor.cxx  startPrototype-dealerrouter.sh.in  testPrototype-dealerrouter.sh.in
examples/MQ/prototype-pair/: CMakeLists.txt  GnuPlot.cxx  GnuPlot.h  Plot.cxx  Plot.h  PrototypeFlpProcessor.cxx  PrototypeFlpProcessor.h  PrototypeSchedulerProcessor.cxx  PrototypeSchedulerProcessor.h  README.md  prototype-pair-variante-b.json  prototype-pair.json  runPrototypeFlpProcessor.cxx  runPrototypeSchedulerProcessor.cxx  startPrototype-pair.sh.in  testPrototype-pair.sh.in
examples/MQ/prototype-pair-teil1/: PrototypeEpnProcessor.cxx  PrototypeEpnProcessor.h  PrototypeSchedulerProcessor.cxx  prototype-pair.json
examples/MQ/prototype-pubsub/: CMakeLists.txt  PrototypeEpnProcessor.cxx  PrototypeEpnProcessor.h  PrototypeFlpProcessor.cxx  PrototypeFlpProcessor.h  PrototypeSchedulerProcessor.cxx  PrototypeSchedulerProcessor.h  README.md  prototype-pubsub.json  runPrototypeFlpProcessor.cxx  runPrototypeSchedulerProcessor.cxx  startPrototype-pubsub.sh.in  testPrototype-pubsub.sh.in
examples/MQ/prototype-pubsub-teil1/: PrototypeEpnProcessor.cxx  PrototypeFlpProcessor.h  prototype-pubsub-backup.json  runPrototypeEpnProcessor.cxx  startPrototype-pubsub.sh.in
examples/MQ/prototype-pushpull/: CMakeLists.txt  PrototypeEpnProessor.h  PrototypeFlpProcessor.cxx  PrototypeSchedulerProcessor.cxx  PrototypeSchedulerProcessor.h  README.md  prototype-pushpull.json  runPrototypeSchedulerProcessor.cxx  startPrototype-pushpull.sh.in  testPrototype-pushpull.sh.in
examples/MQ/prototype-reqrep/: CMakeLists.txt  HardwareInformation.cxx  HardwareInformation.h  PrototypeEpnProcessor.h  PrototypeFlpProcessor.cxx  PrototypeFlpProcessor.h  PrototypeSchedulerProcessor.cxx  PrototypeSchedulerProcessor.h  README.md  runPrototypeSchedulerProcessor.cxx  startPrototype-reqrep.sh.in  startPrototype-reqrep5.sh.in  testPrototype-reqrep.sh.in
examples/MQ/prototype-reqrep-teil1/: PrototypeFlpProcessor.h  prototype-reqrep.json  runPrototypeFlpProcessor.cxx  startPrototype-reqrep.sh.in
examples/MQ/prototype-reqrep2/: PrototypeEpnProcessor.cxx  PrototypeFlpProcessor.cxx  PrototypeFlpProcessor.h  PrototypeSchedulerProcessor.cxx  PrototypeSchedulerProcessor.h  prototype-reqrep.json  runPrototypeFlpProcessor.cxx  runPrototypeSchedulerProcessor.cxx  startPrototype-reqrep.sh.in
(+62 files in other folders)
